[package]
name = "stonix"
version = "1.3.0"
edition = "2021"
authors = ["Francisco del Aguila"]
description = "Motor de persistencia blindado con Sello Maestro para TELARIX"

[lib]
name = "stonix"
crate-type = ["cdylib"]

[[bin]]
name = "stonix"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10.3"
sha2 = "0.10.8"
anyhow = "1.0.75"
bytes = "1.5.0"
hex = "0.4.3"
sysinfo = "0.38.0"
