[package]
name = "stonix"
version = "0.1.2"
edition = "2021"
authors = ["Francisco <curro@telebase.run.place>"]
description = "A lightweight, indexed Key-Value store optimized for ARM and Intel hardware."
license = "MIT"
repository = "https://github.com/tu-usuario/stonix"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
